# spellcheck-microservice

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  pyproject.toml
.github/badges/: coverage.json
.github/workflows/: pipeline.yml
scripts/: __main__.py  _helpers.py  update-dockerhub-readme.py  update-readme.py
tests/: _fixtures.py  conftest.py  test_dict_views.py  test_helpers.py  test_main.py  test_misc.py  test_spell.py  test_spell_views.py  test_various_views.py  test_views.py
whole-app/: models.py  settings.py  spell.py  views.py
whole_app/: __main__.py  auth.py  misc_helpers.py  models.py  settings.py  spell.py  views.py
whole_app/dictionaries/: __init__.py  dummy.py  file.py  protocol.py
